unpackaged/main/default/objects/Show_Intelligence__c/Show_Intelligence__c.object-meta.xml
<CustomObject>
    <description>Multiple instances of show intelligence records can be tied to a Lead which are then brought over to the Account upon conversion. Captures competitive information at show site while prospecting.</description>
    <label>Show Intelligence</label>
    <nameField>
        <displayFormat>SI-{0000}</displayFormat>
        <label>SI Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Show Intelligence</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>