unpackaged/main/default/objects/Show_Intelligence__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Show Intelligence</relationshipLabel>
    <relationshipName>Show_Intelligence</relationshipName>
    <type>Lookup</type>
</CustomField>