unpackaged/main/default/objects/Show_Intelligence__c/fields/General_Comments__c.field-meta.xml
<CustomField>
    <fullName>General_Comments__c</fullName>
    <label>General Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>