unpackaged/main/default/objects/Show_Intelligence__c/fields/Graphics_Needs__c.field-meta.xml
<CustomField>
    <fullName>Graphics_Needs__c</fullName>
    <label>Graphics Needs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Large Format Printing</fullName>
            </value>
            <value>
                <fullName>Banners</fullName>
            </value>
            <value>
                <fullName>Miscellaneous Signage</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>Design &amp; Production</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>