unpackaged/main/default/objects/Show_Intelligence__c/fields/Logistics_Needs__c.field-meta.xml
<CustomField>
    <fullName>Logistics_Needs__c</fullName>
    <label>Logistics Needs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Transportation to &amp; from Show</fullName>
            </value>
            <value>
                <fullName>Multi-Show Transportation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>