unpackaged/main/default/objects/Show_Intelligence__c/fields/Measurement_Company__c.field-meta.xml
<CustomField>
    <fullName>Measurement_Company__c</fullName>
    <label>Measurement Company</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alliance</fullName>
            </value>
            <value>
                <fullName>Alliance – RFID</fullName>
            </value>
            <value>
                <fullName>Bluefish</fullName>
            </value>
            <value>
                <fullName>Capture</fullName>
            </value>
            <value>
                <fullName>CompuSystems</fullName>
            </value>
            <value>
                <fullName>Dietze – RFID</fullName>
            </value>
            <value>
                <fullName>ExpoLogic</fullName>
            </value>
            <value>
                <fullName>Fish</fullName>
            </value>
            <value>
                <fullName>Fish – RFID</fullName>
            </value>
            <value>
                <fullName>ITN</fullName>
            </value>
            <value>
                <fullName>NewLeads</fullName>
            </value>
            <value>
                <fullName>nTag</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PMG</fullName>
            </value>
            <value>
                <fullName>Show services – equipment</fullName>
            </value>
            <value>
                <fullName>Show services – RFID</fullName>
            </value>
            <value>
                <fullName>XPO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>